css/styles.css
.hero-bg {
  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("https://unsplash.it/1200/900?random") no-repeat center center fixed;
  background-size: cover;
}

.tabs {
  margin-bottom: -1px !important;
  position: relative;
}
.tab-content {
  padding: 2rem;
}
.tab-pane {
  display: none;
}
.tab-pane.is-active {
  display: block;
  position: relative;
}
.is-active {
  display: initial;
}

.cent {
  display: block;
  margin: 10px auto;
  padding: 5px;
  border: 1px solid #ccc;
}

.video {
  display: block;
  margin: 0 auto;
}

.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}
.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.box.cta {
  border-radius: 0;
  border-left: none;
  border-right: none;
}

.features,
.medias {
  padding: 3rem 0;
}

.features .fa,
.features .fab {
  font-size: 8rem;
  padding-top: 2rem;
  padding-bottom: 2rem;
  color: #209cee;
}

.is-shady {
  animation: flyintoright 0.4s backwards;
  background: #fff;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0;
  border-radius: 4px;
  display: inline-block;
  margin: 10px;
  position: relative;
  transition: all 0.2s ease-in-out;
}
.is-shady:hover {
  box-shadow: 0 10px 16px rgba(0, 0, 0, 0.13), 0 6px 6px rgba(0, 0, 0, 0.19);
}


.has-same-height .card {
  height: 350px;
  overflow: hidden;
}

.skills-content .media + .media {
  margin-top: .5rem;
}

.skills-content .progress {
  height: 4px !important;
}

.section-heading {
  margin-bottom: 2rem;
}

.info-tiles {
  margin: .75rem auto;
  padding: 0 .75rem;
}

.button.is-primary.is-alt {
  background: linear-gradient(to bottom, #0072ff, #00c6ff);
  font-weight: 700;
  font-size: 14px;
  height: 3rem;
  line-height: 2.8;
  margin-bottom: 1rem;
}
.post {
  margin: 1rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid #E6EAEE;
}
.post:last-child {
  padding-bottom: 0;
  border-bottom: none;
}

.forum-list li {
  margin-bottom: .5rem;
}


@media screen and (max-width: 1087px) {
  .navbar-menu {
    background-color: #888;
  }
}

/*===================================================================================================*/
button:focus,
textarea:focus,
select:focus,
a:focus,
input:focus,
a:active {
  outline: 2px solid red !important;
}

.skip {
  position: absolute;
  top: -1000px;
  left: -1000px;
  height: 1px;
  width: 1px;
  text-align: left;
  overflow: hidden;
}

a.skip:active, 
a.skip:focus, 
a.skip:hover {
    left: 0; 
    top: 0;
    width: auto; 
    height: auto; 
    overflow: visible; 
}

.notify-label {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px);
}

.iframe {
  border: 0;
}


.button.is-info.is-hovered, .button.is-info:hover {
  background-color: #2030ee
}

.is-info {
  background-color: #205fee !important;
}

.is-success {
  color: #08712d !important;
}

.is-primary {
  background-color: #0b6877 !important;
}

.is-danger {
  background-color: #bd1b3c !important;
}

a {
 color: #1823ab !important;
}

.has-text-grey-light {
  color: #676767 !important;
}

.hero.is-info .tabs.is-boxed li.is-active a, .hero.is-info .tabs.is-boxed li.is-active a:hover, .hero.is-info .tabs.is-toggle li.is-active a, .hero.is-info .tabs.is-toggle li.is-active a:hover {
  color: #1872ad !important;
}

